Fix (TT interpreter) : Uninitialized data access while interpreting a high subglyph tree.

DETAILS :

Bug 688421 "Ghostscript deadloop when processing PDF".

Actually the behavior was indeterministic due to
BuildGlyphOutlineAux wrongly computed a points array offset
while concatinating point lists of subglyphs.
The error happened only with subglyphs, which
include subglyphs (i.e. when a subglyph tree height
is greater than 2). The test document embeds a font
with such glyph.

1. The core of the change is in ttfmain.c :
   it fixes the incorrect offset computation.

2. An assertion added into gxpflat.c for an earlier
   detection of an incorrect behavior.
   Without this assertion another assertion
   fails in same module few moments later,
   and the analyzis appears some complicated.

3. Check and propagate a return code from
   gx_flattened_iterator__init in gxfill.c .

EXPECTED DIFFERENCES :

None, because our test base doesn't contain such cases.
Will add one after this fix is committed.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@6215 a1074d23-0009-0410-80fe-cf8c14f379e6